Reference/referencepage.css
body{
	margin-top: 0
}

#full {
	width: 100%;
}

#writername {
	float: right;
	right: 20px;
	top: 20px;
	margin-right: 20px;
	color: #e6c222;
	font-family: "Didot";
}

.header-image {
	width: 100%;
    height: auto;
    margin-top: 10px;
}



.dropbtn:hover, .dropbtn:focus {
    background-color: rgb(69, 129, 202);
    Color: black;
}

.reference-header {
  text-indent: 60px;
  margin-left: 0px;
  background-color: rgb(69, 129, 202);
}

.reference-subheader {
	background-color:rgb(188, 182, 165);
}

.reference-section {
	margin-left: 60px;
}

a:visited {
	color: black;
}

h1 sup {
    transform: translateY(-9px);
    font-size: 18px;
    display: inline-block;
    text-indent: 0;
}

h2 sup {
    font-size: 18px;
}

h1, h2 {
	padding: 10px 0;
}

p {
  font-size: 16px;
  text-indent: 60px;
  margin-left: 60px;
}



#copyright {
	background-color: white;
	flex: 1;
	text-align: center;
}

.p0 { text-indent: 2em; }
.p1 { text-indent: 4em; }
.p2 { text-indent: 15px; }
.p3 { text-indent: 50px; }
.p4 { text-indent: 1em; }
.p5 { text-indent: 300px; }

/* Changing name to only be on separate lines if screen is too small */
@media only screen and (min-width: 700px) {
  #writername br{
   display: none;
  }
}

/* Changing font size of name to get gradually smaller on smaller screens*/

/* Between 390px and 490px width screens, use font size of 20px */
@media only screen and (min-width: 390px) and (max-width: 490px) {
  #writername h1{
   font-size: 20px
  }
}

/* For screens smaller than 390px, use a font size of 16px */
@media only screen and (max-width: 390px) {
  #writername h1{
    font-size: 15px;
  }
}


/* For screens smaller than 590px wide, change main body of text to have smaller font size */
@media only screen and (max-width: 590px) {
  #Section1 p{
    font-size: 16px;

  }
}

@media only screen and (max-device-width: 490px){
	#Section1{
		gap: 0;
	}
	#Section2{
		margin: 0;
		font-size: 20px;
	}
}

@media only screen and (max-device-width: 490px){
	
	 #Section3{
		margin: 0;
		font-size: 18px;
		
	}
}

